--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -683,6 +683,16 @@
    "cell_type": "markdown",
    "id": "7e156dc9-86f0-418b-946a-ecb14e88c2e6",
    "metadata": {},
+   "source": [
+    "For every one percentage point increase of high school educated adults in a state, the associated average increase in income is $1986.79"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a6f03dc-643e-40b7-a8f5-1ee7af086fd6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
